--- a/config/database.yml
+++ b/config/database.yml
@@ -9,18 +9,18 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
-default: &default
-  adapter: mysql2
-  encoding: utf8
-  pool: 5
-  username: root
-  password: chandima9
-  host: localhost
-  socket: /var/run/mysqld/mysqld.sock
-
-development:
-  <<: *default
-  database: vitalsyn_development
+# default: &default
+#   adapter: mysql2
+#   encoding: utf8
+#   pool: 5
+#   username: root
+#   password: chandima9
+#   host: localhost
+#   socket: /var/run/mysqld/mysqld.sock
+#
+# development:
+#   <<: *default
+#   database: vitalsyn_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
