--- a/config/database.yml
+++ b/config/database.yml
@@ -10,14 +10,14 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 # default: &default
-development:
-  adapter: mysql2
-  encoding: utf8
-  pool: 5
-  database: vitalsyn_development
-  username: root
-  password: chandima9
-  host: localhost
+# development:
+#   adapter: mysql2
+#   encoding: utf8
+#   pool: 5
+#   database: vitalsyn_development
+#   username: root
+#   password: chandima9
+#   host: localhost
   # socket: /var/run/mysqld/mysqld.sock
 
 
@@ -64,8 +64,18 @@ development:
 #   username: vitalsyn
 #   password: <%= ENV['VITALSYN_DATABASE_PASSWORD'] %>
 
-# production:
-#   adapter:    postgresql
-#   database:   vital_synapse
-#   pool:       10
-#   timeout:    5000
+development:
+    adapter:    postgresql
+    database:   vital_synapse
+    pool:       10
+    timeout:    5000
+staging:
+  adapter:    postgresql
+  database:   vital_synapse
+  pool:       10
+  timeout:    5000
+production:
+  adapter:    postgresql
+  database:   vital_synapse
+  pool:       10
+  timeout:    5000
