--- a/config/application.yml
+++ b/config/application.yml
@@ -1,8 +1,14 @@
-development:
-    FB_APP_ID:
-    FB_APP_SECRET: 			"585f6bf04d0cdd62309f383c85f07c87"
+# Add configuration values here, as shown below.
+#
+# pusher_app_id: "2954"
+# pusher_key: 7381a978f7dd7f9a1117
+# pusher_secret: abdc3b896a0ffb85d373
+# stripe_api_key: sk_test_2J0l093xOyW72XUYJHE4Dv2r
+# stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
+#
+# production:
+#   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
+#   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 
-
-production:
-  FB_APP_ID: 				"1032668920145714"
-  FB_APP_SECRET: 			"585f6bf04d0cdd62309f383c85f07c87"
+# aws_access_key_id: "AKIAI4E7K7BI55OA47UQ"
+# aws_secret_access_key: "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"
