change database.yml or aka will bising af

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,27 +10,27 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 # default: &default
-development:
-  adapter: mysql2
-  encoding: utf8
-  pool: 5
-  database: vitalsyn_development
-  username: root
-  password: chandima9
-  host: localhost
-  # socket: /var/run/mysqld/mysqld.sock
-
-
-  # socket: /var/run/mysqld/mysqld.sock
-
 # development:
-#   adapter:    postgresql
-#   database:   vital_synapse
-#   pool:       10
-#   timeout:    5000
+#   adapter: mysql2
+#   encoding: utf8
+#   pool: 5
+#   database: vitalsyn_development
+#   username: root
+#   password: chandima9
+#   host: localhost
+  # socket: /var/run/mysqld/mysqld.sock
 
-  # <<: *default
-  # database: vitalsyn_development
+
+  # socket: /var/run/mysqld/mysqld.sock
+
+development:
+  adapter:    postgresql
+  database:   vital_synapse
+  pool:       10
+  timeout:    5000
+
+  <<: *default
+  database: vitalsyn_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -51,21 +51,21 @@ development:
 # On Heroku and other platform providers, you may have a full connection URL
 # available as an environment variable. For example:
 #
-#   DATABASE_URL="mysql2://myuser:mypass@localhost/somedatabase"
-#
-# You can use this database configuration with:
-#
-#   production:
-#     url: <%= ENV['DATABASE_URL'] %>
-#
-# production:
-#   <<: *default
-#   database: vitalsyn_production
-#   username: vitalsyn
-#   password: <%= ENV['VITALSYN_DATABASE_PASSWORD'] %>
+  DATABASE_URL="mysql2://myuser:mypass@localhost/somedatabase"
 
-# production:
-#   adapter:    postgresql
-#   database:   vital_synapse
-#   pool:       10
-#   timeout:    5000
+You can use this database configuration with:
+
+  production:
+    url: <%= ENV['DATABASE_URL'] %>
+
+production:
+  <<: *default
+  database: vitalsyn_production
+  username: vitalsyn
+  password: <%= ENV['VITALSYN_DATABASE_PASSWORD'] %>
+
+production:
+  adapter:    postgresql
+  database:   vital_synapse
+  pool:       10
+  timeout:    5000
