--- a/config/application.yml
+++ b/config/application.yml
@@ -1,3 +1,5 @@
 development:
     FB_APP_ID:
     FB_APP_SECRET: 			"585f6bf04d0cdd62309f383c85f07c87"
+    aws_access_key_id:  "AKIAI4E7K7BI55OA47UQ"
+    aws_secret_access_key: "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"
